feat: add list model and voice clone  (#1174)
* feat:add list model action for fishaudio tool

* feat:add list model action for fishaudio tool

* feat:add list model action for fishaudio tool

--- a/tools/fishaudio/provider/fishaudio.yaml
+++ b/tools/fishaudio/provider/fishaudio.yaml
@@ -48,6 +48,8 @@ credentials_for_provider:
 
 tools:
   - tools/tts.yaml
+  - tools/list_model.yaml
+  - tools/create_model.yaml
 extra:
   python:
     source: provider/fishaudio.py
