--- a/models/openrouter/models/llm/gemini-2.5-pro.yaml
+++ b/models/openrouter/models/llm/gemini-2.5-pro.yaml
@@ -48,6 +48,30 @@ parameter_rules:
     options:
       - text
       - json_object
+  - name: enable_thinking
+    required: false
+    type: string
+    default: manual
+    label:
+      zh_Hans: 思考模式
+      en_US: Thinking mode
+    help:
+      zh_Hans: 是否开启思考模式。
+      en_US: Whether to enable thinking mode.
+    options:
+      - dynamic
+      - manual
+  - name: reasoning_budget
+    label:
+      zh_Hans: 思考预算
+      en_US: Reasoning budget
+    type: int
+    help:
+      zh_Hans: 思考预算，单位为 token
+      en_US: Reasoning budget, in tokens
+    required: false
+    min: 128
+    max: 32768
 pricing:
   input: "1.25"
   output: "10"
