feat: ComfyUI 0.2.0, Video&AutoDownloader Update (#1203)
* add list_models node

* add img2img node

* rename stable_diffusion node to txt2img

* add img2img.json

* register txt2img, img2img and list_models node

* bugfix

* add depth_anything and depth_pro

* Merge pull request #2 from yt-koike/2vid

add img2img and img2vid

* verify samplers and schedulers

* refactor

* refactor

* prompt installing depth related plugins on ComfyUI

* version up dify_plugin

* add ja_JP

* tune img2vid

* add face_swap feature

* add install prompt

* bugfix & add ja_JP translations

* refactor

* add translation

* bump: comfyui to 0.0.9

* format fix

* add upscale feature

* Merge list_upscalers to list_models

* add downloaders

* refactor

* add list LORAs

* change output name

* variable length LORAs

* add localisation

* add localisation and errors

* update README.md

* fix urls in README.md

* small edit on README.md

* shrink AIR.png

* raise Errors instead of text messages

* bugfix when empty LORAs

* optionalize CivitAI model version

* rename files

* fix:workflow

* Update comfyui.yaml

* bugfix

* token support for Huggingface

* Update README.md

* Update README.md

* Update download_civitai.yaml

* Change error messages

* small fix

* bugfix

* change error message

* add json/

* bump up to 0.1.2

* rename post_image() to upload_image()

* add generate() and rename variables

* URL bugfix

* support arbitrary output from multiple nodes

* 202560531

* change requirements.txt

* introduce comfy.generate()

* mime related refactor

* bugfix

* add localisations

* support HiresFix

* download public version

* downloader update

* update requirements.txt

* update README.md

* UI change on HiresFix

* more detailed error messages

* 20250701

* fetch AIR of CivitAI models

* integrate upscale to Image Edit

* accept None for node_id

* add better error message

* simplify list_model's output

* accept custom model for img2vid

* bugfix

* rename one image_edi

--- a/tools/comfyui/provider/comfyui.yaml
+++ b/tools/comfyui/provider/comfyui.yaml
@@ -52,14 +52,12 @@ identity:
   tags:
     - image
 tools:
-  - tools/workflow.yaml
+  - tools/run_workflow.yaml
   - tools/txt2img.yaml
+  - tools/txt2vid.yaml
   - tools/img2img.yaml
   - tools/img2vid.yaml
-  - tools/upscale.yaml
-  - tools/depth_anything.yaml
-  - tools/depth_pro.yaml
-  - tools/face_swap.yaml
+  - tools/image_edit.yaml
   - tools/list_models.yaml
   - tools/list_samplers.yaml
   - tools/image_info.yaml
