--- a/tools/comfyui/tools/img2img.yaml
+++ b/tools/comfyui/tools/img2img.yaml
@@ -86,7 +86,7 @@ parameters:
       pt_BR: Model Name
       zh_Hans: 模型名称
       ja_JP: モデル名
-    required: true
+    required: false
     type: string
 
   - name: steps
@@ -138,7 +138,7 @@ parameters:
 
   - name: sampler_name
     form: llm
-    default: eular
+    default: euler
     human_description:
       en_US: Sampling method
       pt_BR: Sampling method
