--- a/tools/comfyui/tools/img2vid.yaml
+++ b/tools/comfyui/tools/img2vid.yaml
@@ -1,11 +1,8 @@
 description:
   human:
-    en_US:
-      Image to video model. Supports Stable Video Diffusion(SVD) only.
-    pt_BR:
-      Image to video model. Supports Stable Video Diffusion(SVD) only.
+    en_US: Image to video model. Supports Wan2.1, LTXV and Stable Video Diffusion(SVD).
     zh_Hans: 一个预定义的 ComfyUI 工作流，可以使用一个模型和最多3个loras来生成图像。支持包含文本编码器/clip的SD1.5、SDXL、SD3和FLUX，但不支持需要clip加载器的模型。
-    ja_JP: 画像toビデオ。Stable Video Diffusion(SVD) のみサポートしています。
+    ja_JP: 画像toビデオ。Wan2.1 と LTXV，Stable Video Diffusion(SVD) をサポートしています。
   llm: generates video from image
 extra:
   python:
@@ -37,96 +34,49 @@ parameters:
     required: true
     type: files
 
-  - name: model
-    form: llm
+  - name: model_type
+    form: form
     human_description:
-      en_US: Img2Vid Model Name (SVD only)
-      pt_BR: Img2Vid Model Name (SVD only)
-      zh_Hans: Img2Vid 模型名称 (SVD only)
+      en_US: Model
+      pt_BR: Model
+      zh_Hans: 模型
+      ja_JP: モデル
     label:
-      en_US: Img2Vid Model Name (SVD only)
-      pt_BR: Img2Vid Model Name (SVD only)
-      zh_Hans: Img2Vid 模型名称 (SVD only)
+      en_US: Model
+      pt_BR: Model
+      zh_Hans: 模型
+      ja_JP: モデル
     required: true
-    type: string
+    type: select
+    options:
+      - label:
+          en_US: WAN 2.1
+        value: wan2_1
+      - label:
+          en_US: LTXV
+        value: ltxv
+      - label:
+          en_US: Stable Video Diffusion
+        value: svd
+      - label:
+          en_US: Stable Video Diffusion XT
+        value: svd_xt
 
-  - name: width
-    default: 800
-    form: llm
-    human_description:
-      en_US: Width
-      pt_BR: Width
-      zh_Hans: Width
-      ja_JP: 画像幅
-    label:
-      en_US: Width
-      pt_BR: Width
-      zh_Hans: Width
-      ja_JP: 画像幅
-    required: true
-    type: number
-
-  - name: height
-    default: 800
-    form: llm
-    human_description:
-      en_US: Height
-      pt_BR: Height
-      zh_Hans: Height
-      ja_JP: 画像高さ
-    label:
-      en_US: Height
-      pt_BR: Height
-      zh_Hans: Height
-      ja_JP: 画像高さ
-    required: true
-    type: number
-
-  - name: steps
-    form: llm
-    default: 20
-    human_description:
-      en_US: Steps
-      pt_BR: Steps
-      zh_Hans: Steps
-      ja_JP: ステップ数
-    label:
-      en_US: Steps
-      pt_BR: Steps
-      zh_Hans: Steps
-      ja_JP: ステップ数
-    required: false
-    type: number
-
-  - name: cfg
-    default: 2.5
-    form: llm
-    human_description:
-      en_US: CFG Scale
-      pt_BR: CFG Scale
-      zh_Hans: 提示词相关性(CFG Scale)
-      ja_JP: CFG スケール
-    label:
-      en_US: CFG Scale
-      pt_BR: CFG Scale
-      zh_Hans: CFG Scale
-      ja_JP: CFG スケール
-    required: false
-    type: number
-
-  - name: denoise
-    default: 1.0
-    form: llm
-    human_description:
-      en_US: Denoise Ratio
-      pt_BR: Denoise Ratio
-      zh_Hans: Denoise Ratio
-    label:
-      en_US: Denoise Ratio
-      pt_BR: Denoise Ratio
-      zh_Hans: Denoise Ratio
-    required: false
-    type: number
+  #- name: memory_usage
+  #  form: form
+  #  human_description:
+  #    en_US: Memory Usage
+  #  label:
+  #    en_US: Memory Usage
+  #  required: true
+  #  type: select
+  #  options:
+  #    - label:
+  #        en_US: Default
+  #      value: default
+  #    - label:
+  #        en_US: Minimal
+  #      value: minimal
 
   - name: fps
     default: 6
@@ -139,49 +89,158 @@ parameters:
       en_US: FPS
       pt_BR: FPS
       zh_Hans: FPS
-    required: false
+    required: true
     type: number
 
-  - name: frames
+  - name: frameN
     default: 14
     form: llm
     human_description:
-      en_US: Frames
-      pt_BR: Frames
+      en_US: Number of frames
+      pt_BR: Number of frames
       zh_Hans: 图像数量
       ja_JP: フレーム合計数
     label:
-      en_US: Frames
-      pt_BR: Frames
-      zh_Hans: Frames
-      ja_JP: Frames
-    required: false
+      en_US: FrameN
+      pt_BR: FrameN
+      zh_Hans: FrameN
+      ja_JP: FrameN
+    required: true
     type: number
 
-  - name: sampler_name
-    form: llm
-    default: eular
+  - name: output_format
+    form: form
     human_description:
-      en_US: Sampling method
-      pt_BR: Sampling method
-      zh_Hans: Sampling method
+      en_US: Output Format
     label:
-      en_US: Sampling method
-      pt_BR: Sampling method
-      zh_Hans: Sampling method
+      en_US: Output Format
     required: true
+    type: select
+    default: webm
+    options:
+      - label:
+          en_US: MP4
+        value: mp4
+      - label:
+          en_US: WEBM
+        value: webm
+
+  - name: model_name
+    form: llm
+    label:
+      en_US: Img2Vid Model Name
+    human_description:
+      en_US: Img2Vid Model Name. If omitted, default model will be downloaded.
+    required: false
     type: string
 
-  - name: scheduler
-    default: normal
+  - name: prompt
     form: llm
     human_description:
-      en_US: Scheduler
-      pt_BR: Scheduler
-      zh_Hans: Scheduler
+      en_US:
+        Image prompt, you can check the official documentation of Stable Diffusion
+        or FLUX
+      pt_BR:
+        Image prompt, you can check the official documentation of Stable Diffusion
+        or FLUX
+      zh_Hans: 图像提示词，您可以查看 Stable Diffusion 或者 FLUX 的官方文档
+      ja_JP: プロンプト
     label:
-      en_US: Scheduler
-      pt_BR: Scheduler
-      zh_Hans: Scheduler
-    required: true
+      en_US: Prompt
+      pt_BR: Prompt
+      zh_Hans: 提示词
+      ja_JP: プロンプト
+    llm_description:
+      Image prompt of Stable Diffusion, you should describe the image
+      you want to generate as a list of words as possible as detailed, the prompt must
+      be written in English.
+    required: false
     type: string
+
+  - name: negative_prompt
+    default: bad art, ugly, deformed, watermark, duplicated, discontinuous lines
+    form: llm
+    human_description:
+      en_US: Negative prompt
+      pt_BR: Negative prompt
+      zh_Hans: Negative prompt
+      ja_JP: ネガティブプロンプト
+    label:
+      en_US: Negative prompt
+      pt_BR: Negative prompt
+      zh_Hans: Negative prompt
+      ja_JP: ネガティブプロンプト
+    required: false
+    type: string
+
+  #- name: steps
+  #  form: llm
+  #  default: 20
+  #  human_description:
+  #    en_US: Steps
+  #    pt_BR: Steps
+  #    zh_Hans: Steps
+  #    ja_JP: ステップ数
+  #  label:
+  #    en_US: Steps
+  #    pt_BR: Steps
+  #    zh_Hans: Steps
+  #    ja_JP: ステップ数
+  #  required: false
+  #  type: number
+
+  #- name: cfg
+  #  default: 2.5
+  #  form: llm
+  #  human_description:
+  #    en_US: CFG Scale
+  #    pt_BR: CFG Scale
+  #    zh_Hans: 提示词相关性(CFG Scale)
+  #    ja_JP: CFG スケール
+  #  label:
+  #    en_US: CFG Scale
+  #    pt_BR: CFG Scale
+  #    zh_Hans: CFG Scale
+  #    ja_JP: CFG スケール
+  #  required: false
+  #  type: number
+
+  #- name: denoise
+  #  default: 1.0
+  #  form: llm
+  #  human_description:
+  #    en_US: Denoise Ratio
+  #    pt_BR: Denoise Ratio
+  #    zh_Hans: Denoise Ratio
+  #  label:
+  #    en_US: Denoise Ratio
+  #    pt_BR: Denoise Ratio
+  #    zh_Hans: Denoise Ratio
+  #  required: false
+  #  type: number
+
+  #- name: sampler_name
+  #  form: llm
+  #  human_description:
+  #    en_US: Sampling method
+  #    pt_BR: Sampling method
+  #    zh_Hans: Sampling method
+  #  label:
+  #    en_US: Sampling method
+  #    pt_BR: Sampling method
+  #    zh_Hans: Sampling method
+  #  required: false
+  #  type: string
+
+  #- name: scheduler
+  #  form: llm
+  #  human_description:
+  #    en_US: Scheduler
+  #    pt_BR: Scheduler
+  #    zh_Hans: Scheduler
+  #  label:
+  #    en_US: Scheduler
+  #    pt_BR: Scheduler
+  #    zh_Hans: Scheduler
+  #  required: false
+  #  type: string
