--- a/models/wenxin/provider/wenxin.yaml
+++ b/models/wenxin/provider/wenxin.yaml
@@ -1,6 +1,7 @@
 background: '#E8F5FE'
 configurate_methods:
-- predefined-model
+  - predefined-model
+  - customizable-model
 extra:
   python:
     model_sources:
@@ -23,6 +24,60 @@ icon_small:
 label:
   en_US: WenXin
   zh_Hans: 文心一言
+model_credential_schema:
+  credential_form_schemas:
+    - label:
+        en_US: API Key
+      placeholder:
+        en_US: Enter your API Key
+        zh_Hans: 在此输入您的 API Key
+      required: true
+      type: secret-input
+      variable: api_key
+    - default: "4096"
+      label:
+        en_US: Model context size
+        zh_Hans: 模型上下文长度
+      placeholder:
+        en_US: Enter your Model context size
+        zh_Hans: 在此输入您的模型上下文长度
+      required: true
+      type: text-input
+      variable: context_size
+    - default: "4096"
+      label:
+        en_US: Upper bound for max tokens
+        zh_Hans: 最大 token 上限
+      show_on:
+        - value: llm
+          variable: __model_type
+      type: text-input
+      variable: max_tokens
+    - default: no_call
+      label:
+        en_US: Function calling
+      options:
+        - label:
+            en_US: Not Support
+            zh_Hans: 不支持
+          value: no_call
+        - label:
+            en_US: Support
+            zh_Hans: 支持
+          value: function_call
+      required: false
+      show_on:
+        - value: llm
+          variable: __model_type
+      type: select
+      variable: function_calling_type
+  model:
+    label:
+      en_US: Model Name
+      zh_Hans: 模型名称
+    placeholder:
+      en_US: Enter your model name
+      zh_Hans: 输入模型名称
 models:
   llm:
     predefined:
@@ -44,14 +99,6 @@ provider_credential_schema:
     required: true
     type: secret-input
     variable: api_key
-  - label:
-      en_US: Secret Key
-    placeholder:
-      en_US: Enter your Secret Key
-      zh_Hans: 在此输入您的 Secret Key
-    required: true
-    type: secret-input
-    variable: secret_key
 supported_model_types:
 - llm
 - text-embedding
