--- a/models/openrouter/provider/openrouter.yaml
+++ b/models/openrouter/provider/openrouter.yaml
@@ -88,6 +88,24 @@ model_credential_schema:
       variable: __model_type
     type: radio
     variable: vision_support
+  - default: no_call
+    label:
+      en_US: Function calling
+    options:
+      - label:
+          en_US: Not Support
+          zh_Hans: 不支持
+        value: no_call
+      - label:
+          en_US: Support
+          zh_Hans: 支持
+        value: tool_call
+    required: false
+    show_on:
+      - value: llm
+        variable: __model_type
+    type: select
+    variable: function_calling_type
   model:
     label:
       en_US: Model Name
