--- a/models/siliconflow/models/llm/_position.yaml
+++ b/models/siliconflow/models/llm/_position.yaml
@@ -5,10 +5,13 @@
 - deepseek-ai/DeepSeek-R1-Distill-Qwen-32B
 - deepseek-ai/DeepSeek-R1-Distill-Qwen-14B
 - deepseek-ai/DeepSeek-R1-Distill-Qwen-7B
-- deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
 - deepseek-ai/DeepSeek-R1-Distill-Llama-70B
 - deepseek-ai/DeepSeek-R1-Distill-Llama-8B
-- Qwen/QwQ-32B
+- Qwen/Qwen3-235B-A22B
+- Qwen/Qwen3-32B
+- Qwen/Qwen3-30B-A3B
+- Qwen/Qwen3-14B
+- Qwen/Qwen3-8B
 - Qwen/Qwen2.5-72B-Instruct
 - Qwen/Qwen2.5-72B-Instruct-128K
 - Qwen/Qwen2.5-32B-Instruct
@@ -19,11 +22,4 @@
 - Qwen/Qwen2.5-VL-72B-Instruct
 - Qwen/Qwen2.5-VL-32B-Instruct
 - Pro/Qwen/Qwen2.5-VL-7B-Instruct
-- OpenGVLab/InternVL2-26B
-- Pro/OpenGVLab/InternVL2-8B
 - THUDM/glm-4-9b-chat
-- internlm/internlm2_5-20b-chat
-- internlm/internlm2_5-7b-chat
-- meta-llama/Llama-3.3-70B-Instruct
-- meta-llama/Meta-Llama-3.1-70B-Instruct
-- meta-llama/Meta-Llama-3.1-8B-Instruct
