feat: implement Gemini text embeddings (#1186)
* feat: implement Gemini text embeddings

* Update models/gemini/requirements.txt

---------

Co-authored-by: crazywoola <100913391+crazywoola@users.noreply.github.com>

--- a/models/gemini/provider/google.yaml
+++ b/models/gemini/provider/google.yaml
@@ -1,13 +1,14 @@
 background: '#FCFDFF'
 configurate_methods:
-- predefined-model
+  - predefined-model
 description:
   en_US: Google's Gemini model.
   zh_Hans: 谷歌提供的 Gemini 模型.
 extra:
   python:
     model_sources:
-    - models/llm/llm.py
+      - models/llm/llm.py
+      - models/text_embedding/text_embedding.py
     provider_source: provider/google.py
 help:
   title:
@@ -25,7 +26,11 @@ models:
   llm:
     position: models/llm/_position.yaml
     predefined:
-    - models/llm/*.yaml
+      - models/llm/*.yaml
+  text_embedding:
+    position: models/text_embedding/_position.yaml
+    predefined:
+      - models/text_embedding/*.yaml
 provider: google
 provider_credential_schema:
   credential_form_schemas:
@@ -46,4 +51,5 @@ provider_credential_schema:
     type: text-input
     variable: file_url
 supported_model_types:
-- llm
+  - llm
+  - text-embedding
