chore: improve Tavily parameters readability (#1236)
* chore: Update Tavily tool parameters and fix form type

Corrects the 'format' parameter form type in tavily_extract.yaml from 'llm' to 'form'. In tavily_search.yaml, reorders and updates parameters: moves 'max_results', 'auto_parameters', 'chunks_per_source', and 'include_favicon' to new positions, updates their descriptions, and adds missing fields for improved clarity and configuration.

* Update manifest.yaml

--- a/tools/tavily/tools/tavily_extract.yaml
+++ b/tools/tavily/tools/tavily_extract.yaml
@@ -70,7 +70,7 @@ parameters:
         value: advanced
     default: basic
   - name: format
-    form: llm
+    form: form
     human_description:
       en_US: The format of extracted content.
       zh_Hans: 提取内容的格式。
