--- a/models/volcengine_maas/manifest.yaml
+++ b/models/volcengine_maas/manifest.yaml
@@ -28,10 +28,10 @@ resource:
       llm: true
       moderation: false
       rerank: true
-      speech2text: false
+      speech2text: true
       text_embedding: true
       tts: false
     tool:
       enabled: true
 type: plugin
-version: 0.0.21
+version: 0.0.22
