New model in siliconflow https://cloud.siliconflow.cn/sft-5zscin08l0/models?target=THUDM%2FGLM-4.1V-9B-Thinking (#1260)

--- a/models/siliconflow/models/llm/_position.yaml
+++ b/models/siliconflow/models/llm/_position.yaml
@@ -22,4 +22,5 @@
 - Qwen/Qwen2.5-VL-72B-Instruct
 - Qwen/Qwen2.5-VL-32B-Instruct
 - Pro/Qwen/Qwen2.5-VL-7B-Instruct
+- THUDM/GLM-4.1V-9B-Thinking
 - THUDM/glm-4-9b-chat
